--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <h1>FizzBuzzDOM</h1>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
